--- a/home/private_dot_gnupg/gpg.conf
+++ b/home/private_dot_gnupg/gpg.conf
@@ -1,25 +1,52 @@
-# GPG configuration for better UX
+# --------------------------------------------------------------------
+# GPG configuration
+# --------------------------------------------------------------------
 
-# Use AES256 for symmetric encryption
-personal-cipher-preferences AES256 AES192 AES
-
-# Use SHA512 for hashing
-personal-digest-preferences SHA512 SHA384 SHA256
-
-# Use ZLIB for compression
-personal-compress-preferences ZLIB BZIP2 ZIP Uncompressed
-
-# Default key preferences
-default-preference-list SHA512 SHA384 SHA256 AES256 AES192 AES ZLIB BZIP2 ZIP Uncompressed
-
-# Disable weak digest algorithms
-weak-digest SHA1
-
-# Always show long key IDs
+# --- UX improvements ---
+# Always show long key IDs and fingerprints for clarity
 keyid-format 0xlong
-
-# Show fingerprints
 with-fingerprint
 
-# Cross-certify subkeys are present and valid
+# List fingerprints for subkeys too
+with-subkey-fingerprint
+
+# Display human-readable key trust info
+list-options show-uid-validity
+verify-options show-uid-validity
+
+# --- Cryptographic preferences ---
+# Use modern symmetric algorithms
+personal-cipher-preferences AES256 AES192 AES
+
+# Prefer strong digest algorithms when signing
+personal-digest-preferences SHA512 SHA384 SHA256
+cert-digest-algo SHA256
+
+# Use modern compression
+personal-compress-preferences ZLIB BZIP2 ZIP Uncompressed
+
+# Explicitly advertise modern preferences in new keys
+default-preference-list SHA512 SHA384 SHA256 AES256 AES192 AES ZLIB BZIP2 ZIP Uncompressed
+
+# --- Behavior & security ---
+# Always use the GPG agent (default in recent versions)
+use-agent
+
+# Require cross-certification for subkeys (prevents certain attacks)
 require-cross-certification
+
+# Lock memory to prevent swapping secret data (if supported)
+require-secmem
+
+# -- Legacy compatibility (uncomment only when necessary) --
+# allow-weak-digest-algos
+# weak-digest SHA1
+
+# --- Optional: keyserver setup (for convenience only) ---
+# You can comment these out if you never fetch keys directly
+# keyserver hkps://keys.openpgp.org
+# keyserver hkps://keyserver.ubuntu.com
+
+# --- Optional: IPv4 fallback for flaky networks ---
+# Uncomment if you often see "No route to host" from keyservers
+# keyserver-options prefer-ipv4
